syntax = "proto3";
option java_package = "VireProtobuf.vire.utility";
option java_outer_classname = "ModelIdentifierStub";
package vire.utility;

import "vire/utility/BaseIdentifier.proto";

// Identifier for type/class :
message ModelIdentifier {

  BaseIdentifier _base = 1;

}